# GreatMinds4U

./: pyproject.toml
my_django_project/app_quotes/: admin.py  forms.py  models.py  urls.py  views.py
my_django_project/app_quotes/migrations/: 0001_initial.py  0002_alter_authors_user_alter_quotes_user.py  0002_alter_quotes_tags.py  0003_alter_authors_user_alter_quotes_user.py  0003_authors_user_quotes_user.py  0004_alter_authors_born_date_alter_authors_born_location_and_more.py  0004_alter_authors_user_alter_quotes_user.py  0005_alter_authors_born_date_alter_authors_born_location_and_more.py  0005_alter_authors_user_alter_quotes_user.py  0006_alter_authors_user_alter_quotes_user.py  0006_alter_quotes_author_alter_quotes_tags.py  0007_alter_quotes_tags.py  0008_alter_quotes_tags.py  0009_alter_quotes_tags.py  0010_alter_quotes_tags.py  0011_alter_authors_born_date_alter_authors_born_location_and_more.py  0012_alter_quotes_author.py
my_django_project/app_quotes/templates/app_quotes/: add_quote.html  author_single.html  authors.html  base.html  failure.html  index.html  quote_by_tag.html  quotes.html
my_django_project/app_users/: forms.py  urls.py  views.py
my_django_project/app_users/templates/app_users/: login.html  signup.html
my_django_project/my_django_project/: settings.py  urls.py
quotes_site/app_quotes/: admin.py  models.py  urls.py  views.py
quotes_site/app_quotes/templates/app_quotes/: author.html  card.html  index.html
quotes_site/quotes_site/: asgi.py  settings.py  urls.py  wsgi.py
web_hw_10/: load_quotes.py
